{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 141,
  "lineage": "136cd782-6699-3845-8f1f-3f46b583d750",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f538da85d563285",
            "arn": "arn:aws:ec2:eu-central-1:985882743860:instance/i-0f4ef9f29d8ae4464",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile",
            "id": "i-0f4ef9f29d8ae4464",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0bb6ae90a1b35e9cf"
              }
            ],
            "primary_network_interface_id": "eni-0bb6ae90a1b35e9cf",
            "private_dns": "ip-10-0-1-120.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-3-72-52-224.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.52.224",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-060309a0f54fc77eb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034afcc1b78473f2e",
            "tags": {
              "Name": "bastion_instance",
              "Project": "terraform-3tier"
            },
            "tags_all": {
              "Name": "bastion_instance",
              "Project": "terraform-3tier"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e3d09c15db337967"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "i-0f4ef9f29d8ae4464",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.test_profile",
            "aws_iam_role.instance",
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.subnet-pub-1",
            "aws_vpc.VPC1",
            "data.aws_ami.amazon_linux",
            "data.aws_iam_policy_document.trust_policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:internet-gateway/igw-005db62708d37189d",
            "id": "igw-005db62708d37189d",
            "owner_id": "985882743860",
            "region": "eu-central-1",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "igw-005db62708d37189d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:route-table/rtb-074345fb3f563251b",
            "id": "rtb-074345fb3f563251b",
            "owner_id": "985882743860",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "rtb-074345fb3f563251b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:route-table/rtb-07caac897823a719f",
            "id": "rtb-07caac897823a719f",
            "owner_id": "985882743860",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005db62708d37189d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "rtb-07caac897823a719f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043e164f33090254e",
            "region": "eu-central-1",
            "route_table_id": "rtb-074345fb3f563251b",
            "subnet_id": "subnet-0f0061b354d8341e4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "rtbassoc-043e164f33090254e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnet-priv-1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0e22e24f3f8f1f7",
            "region": "eu-central-1",
            "route_table_id": "rtb-074345fb3f563251b",
            "subnet_id": "subnet-04fd7b41fda9d7047"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "rtbassoc-0a0e22e24f3f8f1f7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.subnet-priv-2",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0405cea1348d0662f",
            "region": "eu-central-1",
            "route_table_id": "rtb-07caac897823a719f",
            "subnet_id": "subnet-034afcc1b78473f2e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "rtbassoc-0405cea1348d0662f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet-pub-1",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0365a8a5f520179d2",
            "region": "eu-central-1",
            "route_table_id": "rtb-07caac897823a719f",
            "subnet_id": "subnet-091c02d2a20476f42"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "rtbassoc-0365a8a5f520179d2",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.subnet-pub-2",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:security-group/sg-0e3d09c15db337967",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3d09c15db337967",
            "ingress": [
              {
                "cidr_blocks": [
                  "46.205.197.107/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-7e14df57b1f7643becb9da8eb1",
            "name_prefix": "terraform-",
            "owner_id": "985882743860",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "sg-0e3d09c15db337967",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:security-group/sg-01c59b6ba99659595",
            "description": "Allow bastion sg inbound traffic",
            "egress": [],
            "id": "sg-01c59b6ba99659595",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e3d09c15db337967"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "985882743860",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "sg-01c59b6ba99659595",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:subnet/subnet-0f0061b354d8341e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0061b354d8341e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985882743860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "subnet-0f0061b354d8341e4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:subnet/subnet-04fd7b41fda9d7047",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd7b41fda9d7047",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "985882743860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "private_subnet_2"
            },
            "tags_all": {
              "Name": "private_subnet_2"
            },
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "subnet-04fd7b41fda9d7047",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:subnet/subnet-034afcc1b78473f2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034afcc1b78473f2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985882743860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public_subnet_1"
            },
            "tags_all": {
              "Name": "public_subnet_1"
            },
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "subnet-034afcc1b78473f2e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:subnet/subnet-091c02d2a20476f42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091c02d2a20476f42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "985882743860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "public_subnet_2"
            },
            "tags_all": {
              "Name": "public_subnet_2"
            },
            "vpc_id": "vpc-0deb541ff3f082194"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "subnet-091c02d2a20476f42",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:vpc/vpc-0deb541ff3f082194",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a9d7c8e59f58c42",
            "default_route_table_id": "rtb-063b5cc49a5621ff2",
            "default_security_group_id": "sg-0f0b1e4c8c3a9a4e1",
            "dhcp_options_id": "dopt-065033bc0ef255f82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0deb541ff3f082194",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063b5cc49a5621ff2",
            "owner_id": "985882743860",
            "region": "eu-central-1",
            "tags": {
              "Name": "VPC1",
              "Project": "terraform-3tier"
            },
            "tags_all": {
              "Name": "VPC1",
              "Project": "terraform-3tier"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "vpc-0deb541ff3f082194",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:security-group-rule/sgr-0328a82aeaaf163f8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0328a82aeaaf163f8",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0e3d09c15db337967",
            "security_group_rule_id": "sgr-0328a82aeaaf163f8",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "sgr-0328a82aeaaf163f8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:security-group-rule/sgr-075f7fd1ce9978712",
            "cidr_ipv4": "46.205.196.150/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-075f7fd1ce9978712",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-0e3d09c15db337967",
            "security_group_rule_id": "sgr-075f7fd1ce9978712",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "sgr-075f7fd1ce9978712",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.VPC1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "rds_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:985882743860:security-group-rule/sgr-0ec3ecd4771cc25f7",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0ec3ecd4771cc25f7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0e3d09c15db337967",
            "region": "eu-central-1",
            "security_group_id": "sg-01c59b6ba99659595",
            "security_group_rule_id": "sgr-0ec3ecd4771cc25f7",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "985882743860",
            "id": "sgr-0ec3ecd4771cc25f7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.VPC1"
          ]
        }
      ]
    }
  ]
}